--- a/src/react/package.json
+++ b/src/react/package.json
@@ -14,13 +14,11 @@
     "react-calendar": "^3.0.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1",
-    "react-snap": "^1.23.0"
+    "react-scripts": "3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "postbuild": "rect-snap",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -41,6 +39,9 @@
   },
   "reactSnap": {
     "inlineCss": true,
-    "puppeteerArgs": ["--no-sandbox", "--disable-setuid-sandbox"]
+    "puppeteerArgs": [
+      "--no-sandbox",
+      "--disable-setuid-sandbox"
+    ]
   }
 }
